syntax = "proto3";
package net.ixitxachitls.companion.proto;

import "value.proto";
import "template.proto";

message SettingsProto {
  string nickname = 1;
  string app_id = 2;
  int64 last_message_id = 3;
  bool remote_campaigns = 4;
  bool remote_characters = 5;
  repeated string features = 6;
  int64 last_item_id = 7;
}

message CampaignProto {
  string name = 1;
  string world = 2;
  string id = 4;
  string dm = 5;
  bool published = 6;
  DateProto date = 7;

  message Battle {
    BattleStatus status = 1;
    int32 turn = 2;
    int32 number = 3;
    repeated string creature_id = 4;
    int32 current_creature_index = 5;
    repeated string surprised_creature_id = 6;
  }
  Battle battle = 8;
  int32 next_battle_number = 9;
}

message CreatureProto {
  string id = 1;
  string name = 2;
  string campaign_id = 3;
  string race = 4;
  Gender gender = 5;

  message Abilities {
    int32 strength = 1;
    int32 dexterity = 2;
    int32 constitution = 3;
    int32 intelligence = 4;
    int32 wisdom = 5;
    int32 charisma = 6;
  }
  Abilities abilities = 6;

  message Battle {
    int32 initiative = 1;
    int32 number = 2;
  }
  Battle battle = 7;

  repeated TargetedTimedConditionProto initiated_condition = 8;
  repeated TimedConditionProto affected_condition = 9;
  int32 hp = 10;  int32 hp_max = 11;
  int32 nonlethal_damage = 12;
  repeated ItemProto item = 13;
}

message CharacterProto {
  CreatureProto creature = 1;

  message Level {
    string name = 1;
    int32 hp = 2;
    repeated ParametrizedTemplateProto quality = 3;
    repeated ParametrizedTemplateProto feat = 4;
    Ability ability_increase = 5;
    repeated string spell_known = 6;
  }
  repeated Level level = 2;
  string player = 3;

  repeated ConditionProto condition_history = 4;
  int32 xp = 5;
}

message ItemProto {
  string id = 14;
  string name = 1;
  repeated string template = 2;
  int32 hit_points = 3;
  MoneyProto value = 4;
  string appearance = 5;
  string player_notes = 6;
  string player_name = 7;
  string dm_notes = 8;
  int32 multiple = 9;
  int32 multiuse = 10;
  DurationProto time_left = 11;
  bool identified = 12;
  repeated ItemProto content = 13;
}

message AdventureProto {
  string id = 1;
  string name = 2;
}

message EncounterProto {
  string id = 1;
  string adventure = 2;
  /*
  repeated string location = 3;
  string floor = 4;
  string ceiling = 5;
  string walls = 6;
  string feel = 7;
  string sound = 8;
  string smell = 9;
  string taste = 10;
  string light = 11;
  string skill = 12;
  string doors = 13;
  string number = 2;
  string title = 3;
  repeated string monster = 4;
  repeated string item = 5;
  repeated string trap = 6;
  repeated string hazard = 7;
  repeated string obstacle = 8;
  repeated string secret = 9;
  repeated string event = 10;
  repeated string rule = 11;
  repeated string spell = 12;
  repeated int32 encounter_level = 13;
  repeated string location = 14;
  string doors = 15;
  string floor = 16;
  string ceiling = 17;
  string walls = 18;
  string feel = 19;
  string sound = 20;
  string smell = 21;
  string taste = 22;
  string light = 23;
  repeated string skill = 24;
  DistanceProto distance = 25;
  */
}

message HistoryProto {
  string real_date = 2; // Format YYYY-MM-DD hh:mm:ss in whatever time zone the phone is.
  DateProto game_date = 3;

  enum Type {
    UNKNOWN = 0;
    OTHER = 1;
    CREATE = 2;
    ADD = 3;
    REMOVE = 4;
    XP = 5;
    EXPIRED = 6;
  }
  Type type = 4;
  repeated string entity = 5;
  string description = 6;
  bool viewed = 7;
}

